<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_unlock"
                android:text="@string/unlock"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_reset_key"
                android:text="@string/reset_key"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_reset_lock"
                android:text="@string/reset_lock"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_lock_property"
                android:text="@string/config_feature"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_passage_mode"
                android:text="@string/passageModeEnter"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_time"
                android:text="@string/lockTimeAbout"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_log"
                android:text="@string/get_log"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_battery"
                android:text="@string/get_battery"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_lock_info"
                android:text="@string/lock_system_info"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_lock_status"
                android:text="@string/get_lock_status"/>
            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/btn_set_auto_lock_time"
                android:text="@string/set_auto_locking_time"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</layout>
