<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ttlock.demo.lock.UnlockActivity">
        <Button
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:id="@+id/btn_unlock"
            android:text="@string/unlock"/>
        <Button
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:id="@+id/btn_lock"
            android:text="@string/lock"/>
        <Button
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/btn_rolling_gate_up"
            android:text="@string/rolling_gate_up"/>
        <Button
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/btn_rolling_gate_down"
            android:text="@string/rolling_gate_down"/>
        <Button
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/btn_rolling_gate_pause"
            android:text="@string/rolling_gate_pause"/>
        <Button
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/btn_rolling_gate_lock"
            android:text="@string/rolling_gate_lock"/>
    </LinearLayout>
</layout>
