<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ttlock.demo.passcode.PasscodeActivity">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            android:id="@+id/btn_admin"
            android:textAllCaps="false"
            android:text="@string/admin_passcode"/>
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_end_date"
        android:id="@+id/btn_custom"
        android:textAllCaps="false"
        android:text="@string/set_custom_passcode"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            android:id="@+id/btn_modify"
            android:textAllCaps="false"
            android:text="@string/modify_passcode"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            android:id="@+id/btn_delete_passcode"
            android:textAllCaps="false"
            android:text="@string/delete_passcode"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            android:id="@+id/btn_reset_passcode"
            android:textAllCaps="false"
            android:text="@string/reset_passcode"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            android:id="@+id/btn_get_all_passcodes"
            android:textAllCaps="false"
            android:text="@string/get_valid_passcodes"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            android:id="@+id/btn_get_pwdInfo"
            android:textAllCaps="false"
            android:text="@string/get_pwdinfo"/>
    </LinearLayout>
</layout>
