<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ttlock.demo.lock.PassageModeActivity">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:id="@+id/btn_get"
            android:text="@string/get_passage_mode"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:id="@+id/btn_set"
            android:text="@string/set_passage_mode"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:id="@+id/btn_delete"
            android:text="@string/delete_passage_mode"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:id="@+id/btn_clear"
            android:text="@string/clear_passage_mode"
            />
    </LinearLayout>
</layout>
