<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ttlock.demo.passcode.ModifyPasscodeActivity">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/tv_start_date_title"
        android:gravity="center_vertical"
        android:textAllCaps="false"
        android:text="@string/start_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/tv_start_date"
            app:layout_constraintLeft_toRightOf="@id/tv_start_date_title"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:textAllCaps="false"
            android:text="@string/start_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_start_date"
            android:id="@+id/tv_end_date_title"
            android:textAllCaps="false"
            android:text="@string/end_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/tv_end_date"
            app:layout_constraintLeft_toRightOf="@id/tv_end_date_title"
            app:layout_constraintTop_toTopOf="@id/tv_end_date_title"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:textAllCaps="false"
            android:text="@string/start_date"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            android:id="@+id/btn_date_change"
            android:textAllCaps="false"
            android:text="@string/modify_date"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_date_change"
            android:id="@+id/btn_passcode_change"
            android:textAllCaps="false"
            android:text="@string/modify_passcode"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="@id/btn_passcode_change"
            android:hint="@string/input_new_passcode"
            app:layout_constraintLeft_toRightOf="@id/btn_passcode_change"
            android:layout_marginLeft="10dp"
            android:id="@+id/edt_new_passcode"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_passcode_change"
            android:id="@+id/btn_modify_both"
            android:textAllCaps="false"
            android:text="@string/modify_passcode_and_date"/>
    </android.support.constraint.ConstraintLayout>
</layout>
