<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/tv_start_date_title"
            android:gravity="center_vertical"
            android:textAllCaps="false"
            android:text="@string/start_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/tv_start_date"
            app:layout_constraintLeft_toRightOf="@id/tv_start_date_title"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:textAllCaps="false"
            android:text="@string/start_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_start_date"
            android:id="@+id/tv_end_date_title"
            android:textAllCaps="false"
            android:text="@string/end_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/tv_end_date"
            app:layout_constraintLeft_toRightOf="@id/tv_end_date_title"
            app:layout_constraintTop_toTopOf="@id/tv_end_date_title"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:textAllCaps="false"
            android:text="@string/start_date"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date"
            android:id="@+id/btn_custom"
            android:textAllCaps="false"
            android:text="@string/set_custom_passcode"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="@id/btn_custom"
            android:hint="@string/input_custom_passcode"
            android:layout_marginLeft="10dp"
            android:id="@+id/edt_custom"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
